--- a/heppy.html
+++ b/heppy.html
@@ -23,7 +23,7 @@ html{
     justify-content: center;
     align-items: center;
     height: 100vh;
-    overflow: hidden;
+    overflow-x: hidden;
         }
          #escpgif{
             
