--- a/heppy.html
+++ b/heppy.html
@@ -77,6 +77,7 @@ h1{
     </div>
     
 <script>
+    window.onload=function(){
     function handleChoice(answer) {
   if (answer === 'yes') {
     window.location.href = "thnku.html"; 
@@ -84,6 +85,7 @@ h1{
     window.location.href = "escp.html";  
   }
 }
+    };
 
 </script>
 </body>
