--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1> Blow the candle! </h1>
   <canvas id="cake" width="400" height="400"></canvas>
   <div id="message" style="display: none;" >More gifts on the way! 🫣</div>
-
+  <button id="startBtn">Start Blowing!</button>
 
   <script>
     window.onload = function () {
